Ensure the button text gets centered on mobile if it runs to 2 lines.

--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -77,6 +77,7 @@ input[type=submit], input[type=button], input[type=reset], button, .btn {
 	cursor: pointer;
 	text-decoration: none;
 	display: inline-block;
+	text-align: center;
 
 	&:hover {
 		opacity: .8;
